--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1184,26 +1184,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "bad operand type for unary ~: 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-9aa076a6e709>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mGames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mGames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'TBA'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mGames\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__invert__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1322\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1323\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1324\u001b[0;31m         \u001b[0mnew_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1325\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_constructor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__finalize__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"__invert__\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1326\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/internals/managers.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, f, align_keys, **kwargs)\u001b[0m\n\u001b[1;32m    402\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    403\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 404\u001b[0;31m                 \u001b[0mapplied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    405\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m                 \u001b[0mapplied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/internals/blocks.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, **kwargs)\u001b[0m\n\u001b[1;32m    344\u001b[0m         \"\"\"\n\u001b[1;32m    345\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ignore\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 346\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    348\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_split_op_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: bad operand type for unary ~: 'str'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meta_score</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_score</th>\n",
+       "      <th>esrb_rating</th>\n",
+       "      <th>developers</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>Switch</td>\n",
+       "      <td>Jul 21, 2023</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>E10+</td>\n",
+       "      <td>['Nintendo']</td>\n",
+       "      <td>['Strategy', 'Real-Time', 'General']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>Switch</td>\n",
+       "      <td>Jul 12, 2023</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Nintendo']</td>\n",
+       "      <td>['Racing', 'Arcade', 'Automobile']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>56.0</td>\n",
+       "      <td>Switch</td>\n",
+       "      <td>Jun 30, 2023</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>E</td>\n",
+       "      <td>['Nintendo']</td>\n",
+       "      <td>['Miscellaneous', 'Party / Minigame']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>Switch</td>\n",
+       "      <td>Jun 21, 2023</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>E10+</td>\n",
+       "      <td>['Nintendo']</td>\n",
+       "      <td>['Strategy', 'Real-Time', 'General']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Switch</td>\n",
+       "      <td>Jun 21, 2023</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>E10+</td>\n",
+       "      <td>['Nintendo']</td>\n",
+       "      <td>['Strategy', 'Real-Time', 'General']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1064</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>N64</td>\n",
+       "      <td>Nov 24, 1997</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>E</td>\n",
+       "      <td>['Rare Ltd.']</td>\n",
+       "      <td>['Driving', 'Racing', 'Kart']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1065</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>N64</td>\n",
+       "      <td>Aug 25, 1997</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>T</td>\n",
+       "      <td>['Rare Ltd.']</td>\n",
+       "      <td>['Action', 'Shooter', 'First-Person', 'Modern']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1067</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>N64</td>\n",
+       "      <td>Feb 28, 1997</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>E</td>\n",
+       "      <td>['Rare Ltd.']</td>\n",
+       "      <td>['Action', 'General']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1070</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>N64</td>\n",
+       "      <td>Sep 29, 1996</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>E</td>\n",
+       "      <td>['Paradigm Entertainment']</td>\n",
+       "      <td>['Simulation', 'General']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1081</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>WIIU</td>\n",
+       "      <td>Canceled</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['TOSE']</td>\n",
+       "      <td>['Action', 'Miscellaneous', 'Rhythm', 'Music',...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>680 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      meta_score platform          date  user_score esrb_rating  \\\n",
+       "5           87.0   Switch  Jul 21, 2023         9.0        E10+   \n",
+       "7           74.0   Switch  Jul 12, 2023         7.6         NaN   \n",
+       "8           56.0   Switch  Jun 30, 2023         5.4           E   \n",
+       "9           82.0   Switch  Jun 21, 2023         8.4        E10+   \n",
+       "10          65.0   Switch  Jun 21, 2023         8.6        E10+   \n",
+       "...          ...      ...           ...         ...         ...   \n",
+       "1064        88.0      N64  Nov 24, 1997         8.4           E   \n",
+       "1065        96.0      N64  Aug 25, 1997         8.9           T   \n",
+       "1067        90.0      N64  Feb 28, 1997         8.4           E   \n",
+       "1070        80.0      N64  Sep 29, 1996         7.9           E   \n",
+       "1081        68.0     WIIU      Canceled         7.8         NaN   \n",
+       "\n",
+       "                      developers  \\\n",
+       "5                   ['Nintendo']   \n",
+       "7                   ['Nintendo']   \n",
+       "8                   ['Nintendo']   \n",
+       "9                   ['Nintendo']   \n",
+       "10                  ['Nintendo']   \n",
+       "...                          ...   \n",
+       "1064               ['Rare Ltd.']   \n",
+       "1065               ['Rare Ltd.']   \n",
+       "1067               ['Rare Ltd.']   \n",
+       "1070  ['Paradigm Entertainment']   \n",
+       "1081                    ['TOSE']   \n",
+       "\n",
+       "                                                 genres  \n",
+       "5                  ['Strategy', 'Real-Time', 'General']  \n",
+       "7                    ['Racing', 'Arcade', 'Automobile']  \n",
+       "8                 ['Miscellaneous', 'Party / Minigame']  \n",
+       "9                  ['Strategy', 'Real-Time', 'General']  \n",
+       "10                 ['Strategy', 'Real-Time', 'General']  \n",
+       "...                                                 ...  \n",
+       "1064                      ['Driving', 'Racing', 'Kart']  \n",
+       "1065    ['Action', 'Shooter', 'First-Person', 'Modern']  \n",
+       "1067                              ['Action', 'General']  \n",
+       "1070                          ['Simulation', 'General']  \n",
+       "1081  ['Action', 'Miscellaneous', 'Rhythm', 'Music',...  \n",
+       "\n",
+       "[680 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Games = Games[~Games['date'] == 'TBA']\n",
+    "Games = Games[Games['date'] != 'TBA']\n",
     "Games"
    ]
   },
