--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -6743,9 +6743,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 679 entries, 0 to 678\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   meta_score    679 non-null    float64\n",
+      " 1   user_score    679 non-null    float64\n",
+      " 2   year          679 non-null    int64  \n",
+      " 3   month         679 non-null    int64  \n",
+      " 4   \"Beat-Em-Up\"  679 non-null    int64  \n",
+      "dtypes: float64(2), int64(3)\n",
+      "memory usage: 26.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "Games.iloc[:, :5].info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all of our data is numeric and ready for machine learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What algorithm will suit our data the best? Since we are trying to predict a continuous numeric variable, meta_score, we will employ regression techinques.<br>We'll start with a linear regression method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
