--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -6798,9 +6798,82 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 213,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "543\n",
+      "136\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split data into train and test sets\n",
+    "\n",
+    "X = Games.drop('meta_score', axis=1)\n",
+    "y = Games['meta_score']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=0.2, random_state=23)\n",
+    "\n",
+    "print(len(X_train))\n",
+    "print(len(y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X train:\n",
+      "[[-0.04340362]\n",
+      " [10.82767941]\n",
+      " [-0.03850159]\n",
+      " [-0.09296866]\n",
+      " [-0.09296866]]\n",
+      "X_test:\n",
+      "[[0.37000146]\n",
+      " [0.29374756]\n",
+      " [0.31553439]\n",
+      " [0.34821463]\n",
+      " [0.2501739 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scale variables\n",
+    "\n",
+    "X_train = X_train.values.reshape(-1, 1)\n",
+    "X_test = X_test.values.reshape(-1, 1)\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)\n",
+    "\n",
+    "print(f'X train:\\n{X_train[:5]}\\nX_test:\\n{X_test[:5]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lr = LinearRegression()"
+   ]
   }
  ],
  "metadata": {
