Performed random forest and gradient boosting

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -5814,7 +5814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -5924,10 +5924,292 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Trees"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(543, 16)\n",
+      "(136, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split data into train and test sets\n",
+    "\n",
+    "X = Games.drop('meta_score', axis=1)\n",
+    "y = Games['meta_score']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=23)\n",
+    "\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.3801348  -1.06543343  0.90043276 -0.53547162 -0.47802384 -0.3254325\n",
+      "  3.4099717  -0.16268076 -0.47220014 -0.34914299 -0.29694503 -0.13697345\n",
+      " -1.46243917 -0.46342756 -0.14379392  2.68835874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)\n",
+    "\n",
+    "print(X_train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "dcr = DecisionTreeRegressor()\n",
+    "dcr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = dcr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 9.91289679537808\n",
+      "R-squared: 0.031412747001215546\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f'RMSE: {rmse}')\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'R-squared: {r2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 7.715856285342394\n",
+      "R-squared: 0.4131787397764073\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "rfr = RandomForestRegressor()\n",
+    "rfr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = rfr.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f'RMSE: {rmse}')\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'R-squared: {r2}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest gives us the best predictions which can be expected due to the large number of variables and low samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'max_depth': None, 'min_samples_leaf': 4, 'min_samples_split': 5, 'n_estimators': 200}\n",
+      "RMSE: 7.4582126319849875\n",
+      "R-squared: 0.45171406963336225\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define parameter grid\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'max_depth': [None, 10, 20, 30],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
+    "\n",
+    "# Perform grid search\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=RandomForestRegressor(),\n",
+    "                           param_grid=param_grid,\n",
+    "                           scoring='neg_mean_squared_error',  # Use negative mean squared error for regression\n",
+    "                           cv=5,  # Cross-validation folds\n",
+    "                           n_jobs=-1)  # Use all available CPU cores\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "best_params = grid_search.best_params_\n",
+    "best_estimator = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred = best_estimator.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f'Best Parameters: {best_params}')\n",
+    "print(f'RMSE: {rmse}')\n",
+    "print(f'R-squared: {r2}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 417,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 7.678424688113376\n",
+      "R-squared: 0.4188585699159312\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "\n",
+    "gbr = GradientBoostingRegressor()\n",
+    "gbr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = gbr.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f'RMSE: {rmse}')\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'R-squared: {r2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'learning_rate': 0.01, 'max_depth': 3, 'min_samples_split': 10, 'n_estimators': 300}\n",
+      "RMSE: 7.4104372591611245\n",
+      "R-squared: 0.45871592603970246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define parameter grid\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'max_depth': [3, 4, 5],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "}\n",
+    "\n",
+    "# Perfrom grid search\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=GradientBoostingRegressor(),\n",
+    "                           param_grid=param_grid,\n",
+    "                           scoring='neg_mean_squared_error',  # Use negative mean squared error for regression\n",
+    "                           cv=5,  # Cross-validation folds\n",
+    "                           n_jobs=-1)  # Use all available CPU cores\n",
+    "\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "best_params = grid_search.best_params_\n",
+    "best_estimator = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred = best_estimator.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f'Best Parameters: {best_params}')\n",
+    "print(f'RMSE: {rmse}')\n",
+    "print(f'R-squared: {r2}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best results we obtain is from our gradient boosting regressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
