Predicting Games without scores

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -6234,10 +6234,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Predicting Games without Scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
